# fx-vrp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: conventions.md  data_availability.md
docs/decisions/: 0001-index-track.md  0002-cboe-scraper-vix-validation.md  0003-dukascopy-direct-bi5.md
docs/reports/: data_quality.md  early_exercise.md  vix_replication.md  vrp_stylized_facts.md
paper/figures/: signature_plot.csv
paper/notes/: methodology_implied.md  methodology_realized.md  methodology_vrp.md
scripts/: build_implied.py  build_rv_panel.py  build_vrp.py  data_quality_report.py  early_exercise_study.py  fetch_rates.py  fig_signature.py  ingest_ticks.py  scrape_chains.py
src/fxvrp/: __init__.py  _types.py  config.py  log.py  lookahead.py
src/fxvrp/analysis/: __init__.py  stylized_facts.py  vrp.py
src/fxvrp/data/: __init__.py  cboe.py  chains.py  dukascopy.py  ecb.py  fred.py  http.py  quality.py  rates.py
src/fxvrp/implied/: __init__.py  american.py  black_scholes.py  mfiv.py
src/fxvrp/realized/: __init__.py  estimators.py  har.py  jumps.py  panel.py  sampling.py  signature.py
src/fxvrp/simulate/: __init__.py  gbm.py  heston.py  merton.py  microstructure.py
tests/: conftest.py  test_config.py  test_data_cboe.py  test_data_chains.py  test_data_dukascopy.py  test_data_fred_ecb.py  test_data_http.py  test_data_quality.py  test_data_rates.py  test_har.py  test_implied_american.py  test_implied_bs.py  test_implied_mfiv.py  test_lookahead.py  test_realized_estimators.py  test_realized_jumps.py  test_realized_sampling_panel.py  test_simulate_gbm.py  test_simulate_heston.py  test_simulate_merton.py  test_simulate_microstructure.py  test_stylized_facts.py  test_vrp_series.py
