[project]
name = "fxvrp"
version = "0.1.0"
description = "The FX variance risk premium: jump risk, discrete hedging error, and transaction costs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Olivia" }]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=17.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "arch>=7.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests",
    "types-pyyaml",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fxvrp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF", "PL"]
ignore = [
    "PLR0913", # many arguments is normal for simulator entry points
    "RUF001",  # math notation in strings (σ, ∫, −) is deliberate
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"] # literal comparisons are the point of a test

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]
mypy_path = "src"
plugins = []

[[tool.mypy.overrides]]
module = ["scipy.*", "statsmodels.*", "arch.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "network: touches live external services (deselected in CI)",
    "slow: long-running Monte Carlo checks",
]

[tool.coverage.run]
source = ["src/fxvrp"]
omit = ["src/fxvrp/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
